--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -49,11 +49,11 @@ text-decoration:none !important;
 		  
         <li ui-sref-active="active"><a ui-sref="app.pages.usermanagement"><fa name="users"></fa> <span>Teams</span></a>
           <ul>
-            <li ui-sref-active="active"><a ui-sref="app.users"><fa name="caret-right"></fa>Users</a>
-			<ul>
+            <li ui-sref-active="active"><a ui-sref="app.userdetails"><fa name="caret-right"></fa>Users</a>
+			<!-- <ul>
              <li ui-sref-active="active"><a ui-sref="app.userdetails"><fa name="caret-right"></fa>User Details</a>
              <li ui-sref-active="active"><a ui-sref="app.deploymentmatrix"><fa name="caret-right"></fa>Deployment Matrix</a>
-            </ul>
+            </ul> -->
 			</li>
             <li ui-sref-active="active"><a ui-sref="app.roles"><fa name="caret-right"></fa>Roles</a></li>
 
