--- a/app/views/tmpl/config.html
+++ b/app/views/tmpl/config.html
@@ -1,5 +1,30 @@
-
 <style>
+input{
+	border: 2px solid #e7eaeb !important;
+}
+input:focus{
+border: 2px solid #22beef !important;
+}
+.md-padding {
+    padding-left: 0px;
+	padding-top:5px;
+}
+
+ border-collapse:collapse;
+ padding:5px;
+}.lost {
+ position:relative;
+ top:-110px;left:115px;
+}
+  .form-control.underline-input {
+   
+    padding-left: 13px; }
+</style>
+<style>
+.tabs-dark .nav-tabs > li.active > a, .tabs-dark .nav-tabs > li.active > a:hover, .tabs-dark .nav-tabs > li.active > a:focus {
+    background-color: #2368a0;
+    color: white;
+}
 .md-chips .md-chip-input-container {
   
     margin: 0 0 0 0;
@@ -148,7 +173,7 @@
                                             <label for="exampleInputEmail1">Toolkit Home</label>
                                             <input type="text" placeholder="toolkithome"  name="toolkithome" class="form-control underline-input" ng-model="toolkithome" required>
                                         </div>
-										  <div class="form-group">
+										  <div >
 				     <md-content class="md-padding chipsdemoBasicUsage " >
                                          <label >IIB Host</label>
 										 <!-- <input type="text" placeholder="iibhost"  name="iibhost" class="form-control underline-input" ng-model="iibhost" required> -->
