--- a/app/views/tmpl/dashboard.html
+++ b/app/views/tmpl/dashboard.html
@@ -170,56 +170,24 @@ text-decoration:none !important;
 
 <script>
 
-	function main1(){ document.getElementById('information').innerHTML="DEV&nbsp;<i class='fa fa-angle-down'></i>";
+	function main1(){
 document.getElementById("main1").style.backgroundColor="#f5f5f5";
 document.getElementById("main3").style.backgroundColor="transparent";
 document.getElementById("main2").style.backgroundColor="transparent";
 }
 
-	function main2(){document.getElementById('information').innerHTML="TEST&nbsp;<i class='fa fa-angle-down'></i>";
+	function main2(){
 document.getElementById("main2").style.backgroundColor="#f5f5f5";
 document.getElementById("main1").style.backgroundColor="transparent";
 document.getElementById("main3").style.backgroundColor="transparent";
 }
 
-	function main3(){ document.getElementById('information').innerHTML="PROD&nbsp;<i class='fa fa-angle-down'></i>";
+	function main3(){
 document.getElementById("main3").style.backgroundColor="#f5f5f5";
 document.getElementById("main1").style.backgroundColor="transparent";
 document.getElementById("main2").style.backgroundColor="transparent";
 }
 
-</script>
-
-
-<script>
-
-	function names1(){ document.getElementById('information1').innerHTML="Srinivas&nbsp;<i class='fa fa-angle-down'></i>";
-document.getElementById("names1").style.backgroundColor="#f5f5f5";
-document.getElementById("names3").style.backgroundColor="transparent";
-document.getElementById("names2").style.backgroundColor="transparent";
-document.getElementById("names4").style.backgroundColor="transparent";
-}
-
-	function names2(){document.getElementById('information1').innerHTML="Rajiv&nbsp;<i class='fa fa-angle-down'></i>";
-document.getElementById("names2").style.backgroundColor="#f5f5f5";
-document.getElementById("names1").style.backgroundColor="transparent";
-document.getElementById("names3").style.backgroundColor="transparent";
-document.getElementById("names4").style.backgroundColor="transparent";
-}
-
-	function names3(){ document.getElementById('information1').innerHTML="Mounika&nbsp;<i class='fa fa-angle-down'></i>";
-document.getElementById("names3").style.backgroundColor="#f5f5f5";
-document.getElementById("names1").style.backgroundColor="transparent";
-document.getElementById("names2").style.backgroundColor="transparent";
-document.getElementById("names4").style.backgroundColor="transparent";
-}
-
-	function names4(){ document.getElementById('information1').innerHTML="Deepika&nbsp;<i class='fa fa-angle-down'></i>";
-document.getElementById("names4").style.backgroundColor="#f5f5f5";
-document.getElementById("names3").style.backgroundColor="transparent";
-document.getElementById("names1").style.backgroundColor="transparent";
-document.getElementById("names2").style.backgroundColor="transparent";
-}
 </script>
 
   <!-- row -->
@@ -237,57 +205,6 @@ document.getElementById("names2").style.backgroundColor="transparent";
         <div class="tile-header bg-greensea dvd dvd-btm">
           <h1 class="custom-font">Deployment History</h1>
           <ul class="controls">
-		  
-		   <li class="dropdown" uib-dropdown on-toggle="toggled(open)" >
-
-              <a href uib-dropdown-toggle class="dropdown-toggle settings" id="information1"> Select Team Members <i class="fa fa-angle-down"></i></a>
-<!--<div ng-controller="DashboardTeamMembers">
-<ul ng-repeat="x in teams">
-<li>{{x.label}}</li>
-</ul></div>-->
-              <ul class="dropdown-menu pull-right with-arrow animated littleFadeInUp"  ng-controller="DashboardTeamMembers">
-                
-			<!--	<li ng-repeat="x in teams" onclick="teamsName()">
-				<script>
-					function teamsName(){
-					var ele = document.getElementById('asdf');
-					
-					}
-				</script>
-				<a  class="liteam">
-				{{x.label}}
-				</a>
-				</li>-->
-			
-			
-			
-			<li>
-                  <a id="names1"  href  ng-click="ajaxFaker()" onclick="names1()" style="background-color:#f5f5f5">
-                    Srinivas
-                  </a>
-                </li>
-                <li>
-                  <a id="names" href  ng-click="ajaxFaker()" onclick="names2()">
-                    Rajiv
-                  </a>
-                </li>
-                <li>
-                  <a id="names3"href  ng-click="ajaxFaker()" onclick="names3()">
-                    Mounika
-                  </a>
-                </li>
-				<li>
-                  <a id="names4"href  ng-click="ajaxFaker()" onclick="names4()">
-                    Deepika
-                  </a>
-                </li>
-               
-         
-              </ul>
-
-            </li>
-          
-		  
 		   <li class="dropdown" uib-dropdown on-toggle="toggled(open)">
 
               <a href uib-dropdown-toggle class="dropdown-toggle settings" id="information" > DEV <i class="fa fa-angle-down"></i></a>
